// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtMessage Snap render AtMessage -- props className 1`] = `
<view
  class="at-message at-message--hidden at-message--info test"
/>
`;

exports[`AtMessage Snap render AtMessage -- props customStyle 1`] = `
<view
  class="at-message at-message--hidden at-message--info"
  style="color: red;"
/>
`;

exports[`AtMessage Snap render initial AtMessage 1`] = `
<view
  class="at-message at-message--hidden at-message--info"
/>
`;
